test/1.2/errors/T_ESYNTAX_version_nosemi.dml
/*
  © 2021-2023 Intel Corporation
  SPDX-License-Identifier: MPL-2.0
*/
/// ERROR ESYNTAX
dml 1.2:
